fixed logo and group-promo spacing

--- a/app/assets/sass/_group-promo-lcc.scss
+++ b/app/assets/sass/_group-promo-lcc.scss
@@ -13,8 +13,9 @@ ul.promo-group{
     border:0;
 
     @media (max-width: 600px) {
-        margin:0 -15px 20px -15px;
+       margin:10px 0 30px;
     }
+
 
     li {
         background:$lighter-grey;
@@ -94,6 +95,7 @@ ul.promo-group{
                             top: 50%;
                             right: 15px;
                             margin-top:-10px;
+                            font-size:34px;
                         }
                     }
             }
@@ -103,10 +105,12 @@ ul.promo-group{
               font-weight:300;
               margin-top: 10px;
               margin-bottom:0;
-              color:$secondary-font-color;
+              color:$black;
 
               @media (max-width: 600px) {
                 padding-right:30px;
+                font-size:16px;
+                margin-top: 5px;
               }
             }
         }
@@ -117,6 +121,11 @@ ul.promo-group{
 ul.promo-group{
     &.lcc{
         &.home{
+            margin:30px 0 30px -6px;
+
+            @media (max-width: 600px) {
+                margin:0 -15px 15px -15px;
+            }
             li{
                 background:$white;
 
