--- a/app/assets/sass/_sub-section-nav.scss
+++ b/app/assets/sass/_sub-section-nav.scss
@@ -24,12 +24,12 @@
 
         @media (max-width: 990px) {
             width: calc(100% * (1/2) - 50px);
-            margin:30px 0 30px 50px;
+            margin:25px 0 25px 50px;
         }
 
         @media (max-width: 600px) {
             width: 100%;
-            margin:20px 0 20px 50px;
+            margin:15px 0 15px 50px;
         }
 
         .sub-section-heading{
