--- a/app/assets/sass/_typography-lcc.scss
+++ b/app/assets/sass/_typography-lcc.scss
@@ -231,8 +231,8 @@ h1,
 @media (min-width: 641px) {
   h1,
   .heading-xlarge {
-    margin-top: 0.625em;
-    margin-bottom: 1.25em;
+    margin-top: 0.46875em;
+    margin-bottom: 0.9375em;
   }
 }
 
